--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 Map Tagger
 
+== Installation
+sudo yum install mysql-server
+sudo yum install php-mysql
 sudo yum install php-pear
 sudo pear install HTML_QuickForm2
