support owner's pictures.

--- a/README
+++ b/README
@@ -5,3 +5,6 @@ sudo yum install mysql-server
 sudo yum install php-mysql
 sudo yum install php-pear
 sudo pear install HTML_QuickForm
+
+== Thanks to:
+Icon rainbow: http://icon-rainbow.com/usage/ (for ``no-image'' png file)
